<package format="2">
  <name>motion_primitive_library</name>
  <version>1.2.0</version>
  <description> search-based motion primitive planning library</description>
  <author>Sikang Liu</author>
  <maintainer email="sikang@seas.upenn.edu">Sikang Liu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>csbpl_common</buildtool_depend>
 <build_depend>catkin_simple</build_depend>
 <build_depend>csbpl_common</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- <build_type>cmake</build_type> -->
  </export>
</package>
